--- a/TRS.AI.MistralAI.SDK/TRS.AI.MistralAI.SDK.csproj
+++ b/TRS.AI.MistralAI.SDK/TRS.AI.MistralAI.SDK.csproj
@@ -25,6 +25,7 @@
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
