--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -30,6 +30,6 @@ jobs:
       uses: alirezanet/publish-nuget@v3.1.0
       with:
           PROJECT_FILE_PATH: TRS.AI.MistralAI.SDK\TRS.AI.MistralAI.SDK.csproj
-          NUGET_KEY: ${{secrets.NUGET_KEY}}
+          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
           INCLUDE_SYMBOLS: true
           PACKAGE_NAME: TRS.AI.MistralAI
